sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  }
  var i=0
  var m=1
  while (m!=0 && ecart >=1){
    if (ecart>1){
    ecart = (ecart.toDouble/1.3).toInt
    }
    m=0
    while (i+ecart < getNombreValeurs()){
      if (plusPetit(i+ecart,i)==true){
        echange(i,i+ecart)
        m=m+1
      }
      i=i+1
    }
  }
}